--- a/.github/workflows/ps.yml
+++ b/.github/workflows/ps.yml
@@ -1,36 +1,23 @@
-# This is a basic workflow to help you get started with Actions
+name: Execute PowerShell Script
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main  # Adjust branch name if needed
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: windows-latest  # GitHub Actions Windows runner
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+    - name: Execute PowerShell script
+      shell: pwsh
+      run: |
+        .\script.ps1
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      env:
+        orgName: ${{ secrets.ORG_NAME }}  # Define orgName secret in repository settings > Secrets
+        token: ${{ secrets.TOKEN }}        # Define token secret in repository settings > Secrets
