--- a/.github/workflows/ps.yml
+++ b/.github/workflows/ps.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Execute PowerShell script
       shell: pwsh
       run: |
-        .\script.ps1
+        .\explorer.ps1
 
       env:
         orgName: ${{ secrets.ORG_NAME }}  # Define orgName secret in repository settings > Secrets
