--- a/.github/workflows/ps.yml
+++ b/.github/workflows/ps.yml
@@ -16,6 +16,7 @@ jobs:
     - name: Execute PowerShell script
       shell: pwsh
       run: |
+        echo ${{ secrets.ORG_NAME }}
         .\explorer.ps1
 
       env:
