--- a/.github/workflows/ps.yml
+++ b/.github/workflows/ps.yml
@@ -19,5 +19,5 @@ jobs:
         .\explorer.ps1
 
       env:
-        orgName: ${{ secrets.ORG_NAME }}  # Define orgName secret in repository settings > Secrets
-        token: ${{ secrets.TOKEN }}        # Define token secret in repository settings > Secrets
+        orgName: "wpp-cloudhub-dev"
+        token: "P2vnQg0sB1nNKg.atlasv1.A7kByyMQzM6YRWismCOlH9nEbAEK2fU4KhDNCvwS2qdqqgP1pzQRGYH8pC7ioQ4Cb60"      # Define token secret in repository settings > Secrets
