--- a/.github/workflows/ps.yml
+++ b/.github/workflows/ps.yml
@@ -20,4 +20,4 @@ jobs:
 
       env:
         orgName: ""
-        token: ""      # Define token secret in repository settings > Secrets
+        token: "KkgBSYSRwatEyQ.atlasv1.gpJmj0nF8M0IVUdnRXhef2cmkg9wSzOzsLHrSCZCdFMyLzH1U7gjSSvWVMwzu8Fdshc"      # Define token secret in repository settings > Secrets
