--- a/.github/workflows/ps.yml
+++ b/.github/workflows/ps.yml
@@ -19,5 +19,5 @@ jobs:
         .\explorer.ps1
 
       env:
-        orgName: ""
+        orgName: "Shubhendu"
         token: "KkgBSYSRwatEyQ.atlasv1.gpJmj0nF8M0IVUdnRXhef2cmkg9wSzOzsLHrSCZCdFMyLzH1U7gjSSvWVMwzu8Fdshc"      # Define token secret in repository settings > Secrets
