--- a/.github/workflows/ps.yml
+++ b/.github/workflows/ps.yml
@@ -19,5 +19,5 @@ jobs:
         .\explorer.ps1
 
       env:
-        orgName: "Shubhendu"
-        token: "KkgBSYSRwatEyQ.atlasv1.gpJmj0nF8M0IVUdnRXhef2cmkg9wSzOzsLHrSCZCdFMyLzH1U7gjSSvWVMwzu8Fdshc"      # Define token secret in repository settings > Secrets
+        orgName: ${{ secrets.ORG_NAME }}  # Define orgName secret in repository settings > Secrets
+        token: ${{ secrets.TOKEN }}     # Define token secret in repository settings > Secrets
