--- a/.github/workflows/ps.yml
+++ b/.github/workflows/ps.yml
@@ -16,6 +16,8 @@ jobs:
     - name: Execute PowerShell script
       shell: pwsh
       run: |
+        $orgName = $env:ORG_NAME
+        $token = $env:TOKEN
         .\explorer.ps1
 
       env:
