--- a/.github/workflows/ps.yml
+++ b/.github/workflows/ps.yml
@@ -16,8 +16,8 @@ jobs:
     - name: Execute PowerShell script
       shell: pwsh
       run: |
-        $orgName = $env:orgName
-        $token = $env:token
+        $orgName = $env:ORG_NAME
+        $token = $env:TOKEN
         .\explorer.ps1
 
       env:
