--- a/.github/workflows/ps.yml
+++ b/.github/workflows/ps.yml
@@ -3,11 +3,11 @@ name: Execute PowerShell Script
 on:
   push:
     branches:
-      - main  # Adjust branch name if needed
+      - main
 
 jobs:
   build:
-    runs-on: ubuntu-latest  # GitHub Actions Windows runner
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
@@ -15,11 +15,8 @@ jobs:
 
     - name: Execute PowerShell script
       shell: pwsh
-      run: |
-        $orgName = $env:ORG_NAME
-        $token = $env:TOKEN
-        .\explorer.ps1
-
       env:
-        orgName: ${{ secrets.ORG_NAME }}  # Define orgName secret in repository settings > Secrets
-        token: ${{ secrets.TOKEN }}     # Define token secret in repository settings > Secrets
+        orgName: ${{ secrets.ORG_NAME }}
+        token: ${{ secrets.TOKEN }}
+      run: |
+        .\explorer.ps1
