--- a/.github/workflows/ps.yml
+++ b/.github/workflows/ps.yml
@@ -20,3 +20,9 @@ jobs:
         token: ${{ secrets.TOKEN }}
       run: |
         .\explorer.ps1
+
+    - name: Explorer workspaces
+      uses: actions/upload-artifact@v4
+      with:
+        name: workspacedetails
+        path: output.csv
