--- a/.github/workflows/ps.yml
+++ b/.github/workflows/ps.yml
@@ -25,4 +25,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: workspacedetails
-        path: output.json
+        path: output.csv
