--- a/.github/workflows/ps.yml
+++ b/.github/workflows/ps.yml
@@ -31,7 +31,7 @@ jobs:
         orgName: ${{ secrets.ORG_NAME }}
         token: ${{ secrets.TOKEN }}
       run: |
-        .\explorer.ps1 -type ${{ inputs.type }}
+        .\explorer.ps1
 
     - name: Explorer workspaces
       uses: actions/upload-artifact@v4
